# orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  action.yml  go.mod  go.sum  mkdocs.yml
.claude/: settings.json.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml
cmd/agent/: main.go
cmd/orchestrator/: main.go
cmd/test-vsock/: main.go
docs/: changelog.md  examples.md  faq.md  index.md  openapi.yaml  requirements.txt  security.md
docs/concepts/: architecture.md  index.md  networking.md  runtimes.md  security-model.md  snapshots.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: deployment.md  egress-policy.md  index.md  observability.md  operating-server.md  rate-limiting.md  running-tasks.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  firecracker.md  index.md  mcp-server.md  rest-api.md  runtime-plugin.md  technical.md
docs/sdks/: index.md  python.md  typescript.md
examples/: README.md  analyze-github-repo.md  build-react-app.md  data-pipeline.md  parallel-explore.md  pentest-dummy.md  refactor-codebase.md  run-test-suite.md  scrape-hacker-news.md  screenshot-website.md  solve-leetcode.md
scripts/: build-rootfs.sh  install-firecracker.sh  orchestrator-mcp.sh
sdk/python/: README.md  pyproject.toml
sdk/python/orchestrator/: __init__.py  client.py
web/: package-lock.json  package.json
(+58 files in other folders)
